# OpenMM-Python-Force

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  clang-format.yaml
OpenMMPlugin/: CMakeLists.txt
OpenMMPlugin/cmake/: CommonDirsAndLibs.cmake  StringifyKernelFiles.cmake
OpenMMPlugin/example/EtOH-BAMBOO/: .gitignore  00-clean.sh  01-clone.sh  10-simulate.sh  15-rerun.sh  20-numerical-data.py  30-speed-data.py  Wrapper.py  alcohol.sdf  md.py  plugin.patch
OpenMMPlugin/example/Water-PySCF/: Wrapper.py  md.py
OpenMMPlugin/openmmapi/: CMakeLists.txt
OpenMMPlugin/openmmapi/include/: Callable.h  NumPyForce.h  NumPyKernels.h  TorchForce.h  TorchKernels.h
OpenMMPlugin/openmmapi/include/internal/: NumPyForceImpl.h  TorchForceImpl.h
OpenMMPlugin/openmmapi/src/: Callable.cpp  NumPyForce.cpp  NumPyForceImpl.cpp  TorchForce.cpp  TorchForceImpl.cpp
OpenMMPlugin/python/: CMakeLists.txt  Module.i  NumPyForce.i  OpenMMForce.i  TorchForce.i  setup.py
OpenMMPlugin/test/: test_bond.py  utils.py
clbk/clbk/: clbk.h
clbk/cmake/: path.cmake
clbk/swig/: clbk.i
doc/: CREDITS.txt  api.md  install.md
doc/tex/: .gitignore  Makefile  latexmkrc  refs.bib  sec01.title.tex  sec05.abstract.tex  sec10.intro.tex  sec20.methods.tex  sec30.results.tex  sec34.etoh.tex  sec36.aimd.tex  sec38.othermd.tex  sec80.conclude.tex  sec82.acknowledge.tex  sec90.float.tex  secfig.10.tex  secfig.20.tex  secfig.30.tex  secfig.40.tex  sectbl.10.tex  sectbl.20.tex  src.tex
pybind11/: Makefile  clbk.cpp
script/: add_license.py  uninstall.sh
